# grid

./: Cargo.toml  README.md
src/: builder.rs  coordinate.rs  error.rs  errors.rs  grid.rs  lib.rs
src/coordinate/: errors.rs
src/errors/: build_error.rs  from_iterable_error.rs
tests/: test.rs  test_coordinate.rs  test_grid.rs
