[package]
name = "grid2d"
description = "Two dimensional grid of runtime-defined, but unchangable size"
license-file = "LICENSE"
homepage = "https://github.com/conqp/grid/"
repository = "https://github.com/conqp/grid/"
readme = "README.md"
documentation = "https://docs.rs/grid2d"
keywords = [ "2D", "array", "matrix", "data-structure"]
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
