[package]
name = "grid2d"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "Two dimensional grid of runtime-defined, but unchangable size"
license-file = "LICENSE"
homepage = "https://github.com/conqp/grid/"
repository = "https://github.com/conqp/grid/"
readme = "README.md"
documentation = "https://docs.rs/grid2d"
keywords = [ "2D", "array", "matrix", "data-structure"]
categories = ["data-structures"]
version = "0.3.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
