[package]
name = "grid2d"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "Two dimensional grid of runtime-defined, but unchangable size"
license = "MIT"
homepage = "https://github.com/conqp/grid/"
repository = "https://github.com/conqp/grid/"
readme = "README.md"
documentation = "https://docs.rs/grid2d"
keywords = ["two-dimensional", "array", "matrix", "data-structure"]
categories = ["data-structures"]
version = "0.4.1"
edition = "2021"

[dependencies]
itertools = { version = "0.13", optional = true }

[features]
display = ["itertools/default"]